/* Kes võib osaleda? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -9,10 +9,10 @@ Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisil
 
 Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäkuu pääväni (juunini). Võistlõma või tullaq egäl aol tuu vaihõ seen. 
 
-==Kes võib osaleda?==
-Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[võro kiil|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[lõunõeesti kiil|lõunaeesti keeltes]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] või [[tarto kiil|tartu keeles]]; ka need artiklid on väga oodatud.
+==Kiä või ossa võttaq?==
+Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keelen]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisin [[lõunõeesti kiil|lõunõeesti keelin]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keelen]]; ka nuuq artikliq ommaq väega oodõduq.
 
-Osalemiseks tuleb ennast kõigepealt Vikipeediä [kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
+Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Millest kirjutada?==
 Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 siin nimekirjas] on näiteks 500 teemat, mille kohta artiklit veel ei ole, aga võiks olla, sest nendele on väga palju teistes artiklites viidatud.
