*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -12,7 +12,7 @@ Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäku
 ==Kiä või ossa võttaq?==
 Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keelen]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisin [[lõunõeesti kiil|lõunõeesti keelin]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keelen]]; ka nuuq artikliq ommaq väega oodõduq.
 
-Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
+Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Millest kirjutada?==
 Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 siin nimekirjas] on näiteks 500 teemat, mille kohta artiklit veel ei ole, aga võiks olla, sest nendele on väga palju teistes artiklites viidatud.
