*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -12,7 +12,7 @@ Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal 
 ==Kes võib osaleda?==
 Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[võro kiil|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[lõunõeesti kiil|lõunaeesti keeltes]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] või [[tarto kiil|tartu keeles]]; ka need artiklid on väga oodatud.
 
-Osalemiseks tuleb ennast kõigepealt Vikipeediä [kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
+Osalemiseks tuleb ennast kõigepealt Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+est&type=signup kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
 
 ==Millest kirjutada?==
 Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 siin nimekirjas] on näiteks 500 teemat, mille kohta artiklit veel ei ole, aga võiks olla, sest nendele on väga palju teistes artiklites viidatud.
