--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -14,8 +14,8 @@ Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|
 
 Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
-==Millest kirjutada?==
-Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 siin nimekirjas] on näiteks 500 teemat, mille kohta artiklit veel ei ole, aga võiks olla, sest nendele on väga palju teistes artiklites viidatud.
+==Minkast kirotaq?==
+Kirotaq või kõigõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa|Võrumaa]] ja võro kultuuriga, a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
 
 ==Kuidas kirjutada?==
 Uue artikli alustamiseks vajuta teemade nimekirjas (või mõnes artiklis) soovitud pealkirjaga punasele lingile. Või kirjuta uue artikli pealkiri pealehel olevasse spetsiaalsesse uue artikli loomise kasti ja vajuta nuppu ''Luuq leht!''. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
