--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -17,7 +17,7 @@ Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia
 ==Minkast kirotaq?==
 Kirotaq või kõigõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa|Võrumaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
 
-==Kuidas kirjutada?==
+==Kuis kirotaq?==
 Uue artikli alustamiseks vajuta teemade nimekirjas (või mõnes artiklis) soovitud pealkirjaga punasele lingile. Või kirjuta uue artikli pealkiri pealehel olevasse spetsiaalsesse uue artikli loomise kasti ja vajuta nuppu ''Luuq leht!''. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
 Vaja oleks, et paneksid artiklisse kirja ka allika, kust kirjutamiseks materjali leidsid, siis on artikkel usaldusväärsem ja lugeja saab selle õigsust allikast kontrollida. Kuid raamatust, internetist või mujalt päris maha kirjutada ei tohi, see oleks teiste autorite loomingu vargus.
