--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -18,13 +18,13 @@ Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia
 Kirotaq või kõigõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa|Võrumaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
 
 ==Kuis kirotaq?==
-Uue artikli alustamiseks vajuta teemade nimekirjas (või mõnes artiklis) soovitud pealkirjaga punasele lingile. Või kirjuta uue artikli pealkiri pealehel olevasse spetsiaalsesse uue artikli loomise kasti ja vajuta nuppu ''Luuq leht!''. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
+Vahtsõ artikli alostaqmisõs vaodaq teemadõ nimekirän (vai mõnõn artiklin) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõman olõva lühkü artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
-Vaja oleks, et paneksid artiklisse kirja ka allika, kust kirjutamiseks materjali leidsid, siis on artikkel usaldusväärsem ja lugeja saab selle õigsust allikast kontrollida. Kuid raamatust, internetist või mujalt päris maha kirjutada ei tohi, see oleks teiste autorite loomingu vargus.
+Vaia olnuq, et sa pandnuq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärsemb ja lugõja saa taa kotsilõ lättist esiq perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq ei toheq, tuu olnuq tõisi autoridõ loomingu vargus. Külh või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro kiilde ümbre pandaq.
 
-Kui tahad teada, milline üks Vikipeediä artikkel peaks välja nägema, loe ja uuri erinevaid juba kirjutatud artikleid, näiteks (lühematest) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikematest) [[Hurda Jakob]], [[Iraan]] või [[Lasits]].
+Ku tahat teedäq, määne üts Vikipeediä artikli pidänüq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artikliid, näütüses (lühkümbist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikembist) [[Hurda Jakob]], [[Iraan]] või [[Lasits]].
 
-Kui oled artikli valmis saanud, lisa selle link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osalevate artiklite leheküljele]], siis saab žürii aru, et oled võistlusel osaleja. Igaüks võib võistlusele esitada nii palju artikleid kui soovib.
+Ku olõt artikli valmis saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklite leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Egäüts või võistlusõlõ pandaq nii pall'o artikliid ku esiq taht.
 
 ==Kes võistlust korraldab ja kes žüriis on?==
 Võistlust korraldab MTÜ Wikimedia Eesti.
