/* Kes võistlust korraldab ja kes žüriis on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -26,10 +26,10 @@ Ku tahat teedäq, määne üts Vikipeediä artikli pidänüq vällä näütämä
 
 Ku olõt artikli valmis saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklite leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Egäüts või võistlusõlõ pandaq nii pall'o artikliid ku esiq taht.
 
-==Kes võistlust korraldab ja kes žüriis on?==
-Võistlust korraldab MTÜ Wikimedia Eesti.
+==Kiä võistlust kõrraldas ja kiä süriin ommaq?==
+Võistlust kõrraldas MTÜ Wikimedia Eesti.
 
-Žüriis on [[pruukja:Valdis|Valdis Laan]], Triin Iva ja Tiia Allas.
+Žüriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
 ==Mis auhinnaks on?==
 Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Instituut]].
