/* Mis auhinnaks on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -31,10 +31,10 @@ Võistlust kõrraldas MTÜ Wikimedia Eesti.
 
 Žüriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
-==Mis auhinnaks on?==
-Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Instituut]].
+==Miä avvohinnas om?==
+Parõmbilõ kirotajilõ om vällä pandnuq avvohinnaq [[Võro Instituut|Võro Instituut]].
 
-Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
+Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]].
 
 ==Kust saab nõu?==
 Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
