/* Kust saab nõu? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -36,9 +36,9 @@ Parõmbilõ kirotajilõ om vällä pandnuq avvohinnaq [[Võro Instituut|Võro In
 
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]].
 
-==Kust saab nõu?==
-Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
+==Kost saa nõvvo?==
+Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
-Küsimusi võid kirjutada selle lehekülje [arutelusse] või saata e-postiga sulev.iva [ät] ut.ee.
+Küsümiisi võit kirotaq seo lehe [arotustõ] vai saataq e-postiga sulev.iva [ät] ut.ee.
 
 [[katõgooria:Vikipeediä]]
