/* Kust saab nõu? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -39,6 +39,6 @@ Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Ees
 ==Kust saab nõu?==
 Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
-Küsimusi võid kirjutada selle lehekülje [arutelusse] või saata e-postiga sulev.iva [ät] ut.ee.
+Küsimusi võid kirjutada selle lehekülje [[Wikipedia arotus:Artiklivõistlus (2013) vro|arutusse]] või saata e-postiga sulev.iva [ät] ut.ee.
 
 [[katõgooria:Vikipeediä]]
