/* Kiä võistlust kõrraldas ja kiä süriin ommaq? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -29,7 +29,7 @@ Ku olõt artikli valmis saanuq, panõq uma artikli link [[Wikipedia:Artiklivõis
 ==Kiä võistlust kõrraldas ja kiä süriin ommaq?==
 Võistlust kõrraldas MTÜ Wikimedia Eesti.
 
-Žüriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
+Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
 ==Miä avvohinnas om?==
 Parõmbilõ kirotajilõ om vällä pandnuq avvohinnaq [[Võro Instituut|Võro Instituut]].
