*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -10,7 +10,7 @@ Võistlus on hea võimalus võrukeelset vaba veebientsüklopeediat inimestele tu
 Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
 
 ==Kes võib osaleda?==
-Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[võro kiil|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[lõunõeesti kiil|lõunaeesti keeltes]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] või [[tarto kiil|tartu keeles]]; ka need artiklid on väga oodatud.
+Osaleda võib igaüks (peale žürii liikmete), kes oskab [[võro kiil|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[lõunõeesti kiil|lõunaeesti keeltes]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] või [[tarto kiil|tartu keeles]]; ka need artiklid on väga oodatud.
 
 Osalemiseks tuleb ennast kõigepealt Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+est&type=signup kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
 
