--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -37,7 +37,7 @@ Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Insti
 Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
 
 ==Kust saab nõu?==
-Vaata [[Wikipedia:Lühkü pruukmisoppus|redigeerimisjuhendit]].
+Vaata [[Wikipedia:Lühkü pruukmisoppus|redigeerimisjuhendit]] ja [[Wikipedia:Vikipeediä säädüseq|reegleid]].
 
 Küsimusi võid kirjutada selle lehekülje [[Wikipedia arotus:Artiklivõistlus (2013) vro|arutusse]] või saata e-postiga sulev.iva [ät] ut.ee.
 
