/* Kost saa nõvvo? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -37,7 +37,7 @@ Parõmbilõ kirotajilõ om vällä pandnuq avvohinnaq [[Võro Instituut|Võro In
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]].
 
 ==Kost saa nõvvo?==
-Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
+Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]]..
 
 Küsümiisi võit kirotaq seo lehe [[Wikipedia arotus:Artiklivõistlus (2013) vro|arotustõ]] vai saataq e-postiga sulev.iva [ät] ut.ee.
 
