*Empty MediaWiki Message*

--- a/Perä-maa.mw
+++ b/Perä-maa.mw
@@ -1,5 +1,5 @@
 '''Perä Maa''' om muistinõ Soomõ-Ugri maa siinpuul Uurali mäestikku. 
 
-Parla paiknõs  Perämaa kotsil Permi krai ja tollõ loodõnukan Permikomi ringkond. Muistidsõ Perämaa hindätiidmine om kygõ suurõmb Permi-komin.
+Parla paiknõs  Perämaa kotsil Permi krai ja tollõ loodõnukan [[Permikomi Ringkond]]. Muistidsõ Perämaa hindätiidmine om kygõ suurõmb Permi-komin.
 
 http://pera-maa.narod.ru/
