--- a/Permikomi_Piirkund.mw
+++ b/Permikomi_Piirkund.mw
@@ -1,4 +1,5 @@
 
+Kuni 2005 '''Permikomi Autonoomnõ Ringkond'''
 http://koi.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D0%BC_%D0%BB%D0%B0%D0%B4%D0%BE%D1%80%D0%B8%D1%81%D1%8C_%D0%9A%D0%BE%D0%BC%D0%B8_%D0%BA%D1%8B%D1%82%D1%88
 
 
