/* Miä avvohinnas om? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -32,7 +32,10 @@ Võistlust kõrraldas MTÜ Wikimedia Eesti.
 Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
 ==Miä avvohinnas om?==
-Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq Kubija Hotell-Luudusspaa (spaa- ja sannakeskusõ priipilediq) ni Võro Instituut ja Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus (umakeelidseq raamaduq ja CD-q).
+Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
+
+* Kubija Hotell-Luudusspaa (spaa- ja sannakeskusõ priipilediq) 
+* Võro Instituut ja Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus (umakeelidseq raamaduq ja CD-q).
 
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
