--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -35,9 +35,9 @@ Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
 
 * Kubija Hotell-Luudusspaa - spaa- ja sannakeskusõ priipilediq; 
-* Võro Instituut ja Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus - umakeelidseq raamaduq ja CD-q.
+* Võro Instituut ja TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus - umakeelidseq raamaduq ja CD-q.
 
-Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
+Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 12. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
 ==Kost saa nõvvo?==
 Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]]..
