/* Miä avvohinnas om? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -37,7 +37,7 @@ Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
 * Kubija Hotell-Luudusspaa - spaa- ja sannakeskusõ priipilediq; 
 * Võro Instituut ja TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus - umakeelidseq raamaduq ja CD-q.
 
-Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
+Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
 ==Kost saa nõvvo?==
 Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]]..
