--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -32,9 +32,12 @@ Võistlust korraldab MTÜ Wikimedia Eesti.
 Žüriis on [[pruukja:Valdis|Valdis Laan]], Triin Iva ja Tiia Allas.
 
 ==Mis auhinnaks on?==
-Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Instituut]].
+Parimatele kirjutajatele on välja pannud auhinnad:
 
-Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
+* Kubija Hotell-Loodusspaa - spaa- ja saunakeskuse priipiletid; 
+* Võru Instituut ja TÜ Lõuna-Eesti keele- ja kultuuriuuringute keskus - omakeelsed raamatud ja CD-d.
+
+Võitjad kuulutatakse välja ja auhinnad antakse kätte 13. juunil kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]] (Lossi 3-134, Tartu).
 
 ==Kust saab nõu?==
 Vaata [[Wikipedia:Lühkü pruukmisoppus|redigeerimisjuhendit]] ja [[Wikipedia:Vikipeediä säädüseq|reegleid]].
