*Empty MediaWiki Message*

--- a/Itaalia.mw
+++ b/Itaalia.mw
@@ -9,7 +9,7 @@ Riigikiil'=[[itaalia kiil]]|
 Pääliin=[[Rooma]]|
 Riigitüübi pää=President'|
 Riigipää=[[Napolitano Giorgio]]|
-Pääministri=[[Monti Mario]]|
+Pääministri=[[Letta Enrico]]|
 Suurus=301 230|
 Suurusõ perrä=71|
 Vett=2,4%|
