*Empty MediaWiki Message*

--- a/Viitso_Tiit-Rein.mw
+++ b/Viitso_Tiit-Rein.mw
@@ -2,7 +2,7 @@
 
 '''Viitso Tiit-Rein''' (Tiit-Rein Viitso, sündünüq [[4. urbõkuu päiv|4. urbõkuu pääväl]] [[1938]]) om eesti keeletiidläne, [[Tarto Ülikuul|Tarto Ülikooli]] [[õdagumeresoomõ keeleq|õdagumeresoomõ kiili]] emeriitprofõsri. 
 
-Viitso om uurnuq õdagumeresoomõ kiili [[fonoloogia]]t, [[morfoloogia]]t ja murdit (lähkümbähe [[Vepsä kiil|vepsä]] ja [[liivi kiil]]t), õdagumeresoomõ jt [[Soomõ-ugri keeleq|soomõ-ugri kiili]] aoluulist [[foneetika]]t ja inneaoluuliidsi kontaktõ. Niisama om tä avitanuq liivi ja [[võro kiil|võro kiräkeele]] [[keelekõrraldus|kõrraldusõ]] man.
+Viitso om uurnuq õdagumeresoomõ kiili [[fonoloogia]]t, [[morfoloogia]]t ja murdit (lähkümbähe [[Vepsä kiil|vepsä]] ja [[liivi kiil]]t), õdagumeresoomõ jt [[Soomõ-ugri keeleq|soomõ-ugri kiili]] aoluulist [[foneetiga|foneetikat]]t ja inneaoluuliidsi kontaktõ. Niisama om tä avitanuq liivi ja [[võro kiil|võro kiräkeele]] [[keelekõrraldus|kõrraldusõ]] man.
 
 2011. aastagal tull' vällä Laiapea Vahuri dokumentaalfilm "Professor Viitso liivlased".
 
