*Empty MediaWiki Message*

--- a/Kiil_(keeletiidüs).mw
+++ b/Kiil_(keeletiidüs).mw
@@ -26,6 +26,7 @@ Päält kotusõmurdidõ või keele seen ollaq ütiskunnarühmi, klassõ vai subk
 
 
 [[bar:Sprache]]
+[[en:Language]]
 [[ht:Lang]]
 [[arz:لغة]]
 [[cu:Ѩꙁꙑ́къ]]
