The file [[:Image:Omar_Khayam.jpg]] has been removed, as it has been deleted by [[:commons:User:INeverCry]]: ''missing permission as of 19 April 2013''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Umar_Hajjam.mw
+++ b/Umar_Hajjam.mw
@@ -1,5 +1,5 @@
 {{Elokäük
-|pilt=Omar Khayam.jpg
+|pilt=
 |pildiallkiri=Umar Hajjam
 |nimi=Umar Hajjam
 |umakeeline_nimi=Gijasuddin Abu'l-Fath Umar ibn Ibrahim al-Hajjami an-Nišaburi
