--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -35,6 +35,7 @@ Võistlust korraldab MTÜ Wikimedia Eesti.
 Parimatele kirjutajatele on välja pannud auhinnad:
 
 * Kubija Hotell-Loodusspaa - spaa- ja saunakeskuse priipiletid; 
+* [[Zetod]], [[Klapp]] ja [[Kiiora]] - iga ansambli uusim helikandja;
 * Võru Instituut ja TÜ Lõuna-Eesti keele- ja kultuuriuuringute keskus - omakeelsed raamatud ja CD-d.
 
 Võitjad kuulutatakse välja ja auhinnad antakse kätte 13. juunil kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]] (Lossi 3-134, Tartu).
