/* Miä avvohinnas om? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -35,6 +35,7 @@ Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
 
 * Kubija Hotell-Luudusspaa - spaa- ja sannakeskusõ priipilediq; 
+* [[Zetod]], [[Klapp]] ja [[Kiiora]] - kolm lasõrplaati;
 * Võro Instituut ja TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus - umakeelidseq raamaduq ja CD-q.
 
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
