*Empty MediaWiki Message*

--- a/Wikipedia:Pääleht.mw
+++ b/Wikipedia:Pääleht.mw
@@ -55,7 +55,7 @@ break=no
 
 </div>
 | align="left" colspan="2" valign="top" style="border-width: 1px; border-color:#FFD700; border-style: solid; background:#D1EEEE; padding: 8px" | <center>'''Abis vahtsõlõ pruukjalõ'''</center>
-*'''[[Wikipedia:Artiklivõistlus (2013) vro|NB! Võrokeeline artiklivõistlus!]]'''
+*'''[[Wikipedia:Artiklivõistlus (2013) vro|Võrokeeline artiklivõistlus!]]'''
 *[[Wikipedia:Vikipeediä tutvustus|Vikipeediä tutvustus]]
 *[[Wikipedia:Vikipeediä säädüseq|Vikipeediä säädüseq]]
 *[[Lühkü pruukmisoppus|Pruukmisoppus]]
