/* Miä avvohinnas om? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -34,9 +34,9 @@ Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 ==Miä avvohinnas om?==
 Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
 
-* Kubija Hotell-Luudusspaa - spaa- ja sannakeskusõ priipilediq; 
-* [[Zetod]], [[Klapp]] ja [[Kiiora]] - egä andsambli kõgõ vahtsõmb lasõrplaat;
-* Võro Instituut ja TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus - umakeelidseq raamaduq ja CD-q.
+* '''Kubija Hotell-Luudusspaa''' - spaa- ja sannakeskusõ priipilediq; 
+* '''[[Zetod]], [[Klapp]]''' ja '''[[Kiiora]]''' - egä andsambli kõgõ vahtsõmb lasõrplaat;
+* '''Võro Instituut''' ja '''TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus''' - umakeelidseq raamaduq ja CD-q.
 
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
