/* Mis auhinnaks on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -34,9 +34,9 @@ Võistlust korraldab MTÜ Wikimedia Eesti.
 ==Mis auhinnaks on?==
 Parimatele kirjutajatele on välja pannud auhinnad:
 
-* Kubija Hotell-Loodusspaa - spaa- ja saunakeskuse priipiletid; 
-* [[Zetod]], [[Klapp]] ja [[Kiiora]] - iga ansambli uusim helikandja;
-* Võru Instituut ja TÜ Lõuna-Eesti keele- ja kultuuriuuringute keskus - omakeelsed raamatud ja CD-d.
+* '''Kubija Hotell-Loodusspaa''' - spaa- ja saunakeskuse priipiletid; 
+* '''[[Zetod]], [[Klapp]]''' ja '''[[Kiiora]]''' - iga ansambli uusim helikandja;
+* '''Võru Instituut''' ja '''TÜ Lõuna-Eesti keele- ja kultuuriuuringute keskus''' - omakeelsed raamatud ja CD-d.
 
 Võitjad kuulutatakse välja ja auhinnad antakse kätte 13. juunil kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]] (Lossi 3-134, Tartu).
 
