--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -1,6 +1,13 @@
 {{Nowrap|[[file:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
 {{Nowrap|[[Pilt:Võrokõisi_lipp.png|border|25px]] [[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]}}
 
+{| cellpadding="3" cellspacing="3" style="float:right; margin:5px; border:2px solid; border-color:#CFCFCF; text-size: small; background:#ffffff"
+|[[Pilt:Võrokõisi_lipp.png|150px|keskel]]
+|-
+|<center>'''Võrukeelne artiklivõistlus'''</center>
+<hr align="center" size="4" width="100%">
+* [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjad ja artiklid]]
+|}
 
 
 '''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. 
