--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -1,6 +1,13 @@
 {{Nowrap|[[Pilt:Võrokõisi_lipp.png|border|25px]] [[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]}}
 {{Nowrap|[[file:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
 
+{| cellpadding="3" cellspacing="3" style="float:right; margin:5px; border:2px solid; border-color:#CFCFCF; text-size: small; background:#ffffff"
+|[[Pilt:Võrokõisi_lipp.png|150px|keskel]]
+|-
+|<center>'''Võrokeeline artiklivõistlus'''</center>
+<hr align="center" size="4" width="100%">
+* [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjaq ja artikliq]]
+|}
 
 
 '''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. 
