*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -1,4 +1,4 @@
-Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõst osavõtjaq artikliq. Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle link egä artikli kotsilõ, minka sa võistlusõst ossa võtat:
+Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõst osavõtjaq artikliq. Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä uma Vikipeediä pruukjanimi ja link egä artikli kotsilõ, minka sa võistlusõst ossa võtat:
 
 ==Osavõtjaq artikliq==
 
