/* Kost saa nõvvo? */

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -48,7 +48,7 @@ Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
 Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
 ==Kost saa nõvvo?==
-Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]]..
+Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
 
 Küsümiisi võit kirotaq seo lehe [[Wikipedia arotus:Artiklivõistlus (2013) vro|arotustõ]] vai saataq e-postiga sulev.iva [ät] ut.ee.
 
