--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -22,7 +22,7 @@ Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|
 Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Minkast kirotaq?==
-Kirotaq või kõigõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
+Kirotaq või kõgõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostaqmisõs vaodaq teemadõ nimekirän (vai mõnõn artiklin) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõman olõva lühkü artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
