--- a/Wikipedia:Lühkü_pruukmisoppus.mw
+++ b/Wikipedia:Lühkü_pruukmisoppus.mw
@@ -8,7 +8,7 @@ Har'otaq võit [[Liivakast'|liivakastin]].
 ==Kaeq viil==
 *[[Wikipedia:Vikipeediä säädüseq]] 
 *[[Wikipedia:Miä Vikipeediä olõ-i]]
-*[[:et:Vikipeedia:Uuele_kaast%C3%B6%C3%B6lisele|Pikemb (eestikeeline) pruukja-abi]].
+*[[:et:Vikipeedia:Uuele_kaast%C3%B6%C3%B6lisele|Pikemb (eestikeeline) vahtsõ pruukja abileht]].
 *[[Wikipedia:Sagõhõmbaq küsümüseq]]
 *[[Wikipedia:Artikliq, miä egan keelen pidänü olõma|Artikliq, miä egan keelen pidänü olõma]]
 
