--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -2,7 +2,7 @@ Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõ
 
 Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä uma Vikipeediä pruukjanimi ja link egä artikli kotsilõ, minka sa võistlusõst ossa võtat:
 
-==Osavõtjaq artikliq==
+==Osavõtjaq artikliq ja kirotajaq==
 
 * [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]].
 * ...
