*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -5,6 +5,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 ==Osavõtjaq artikliq ja kirotajaq==
 
 * [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]].
+*[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arutelu]])
 * ...
 * ...
 * ...
