/* Osavõtjaq artikliq ja kirotajaq */

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -4,8 +4,8 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 
 ==Osavõtjaq artikliq ja kirotajaq==
 
-* [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]].
-*[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arutelu]])
+* [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]] ([[Pruukja arotus:Annahkur|arotus]])
+*[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arotus]])
 * ...
 * ...
 * ...
