--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -1,5 +1,5 @@
 {{Nowrap|[[Pilt:Võrokõisi_lipp.png|border|25px]] [[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]}}
-{{Nowrap|[[Pilt:Flag of Setomaa.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) set|Seto keeleh]]}}
+{{Nowrap|[[Flag_of_Setomaa.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) set|Seto keeleh]]}}
 {{Nowrap|[[file:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
 
 
