--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -1,6 +1,6 @@
 {{Nowrap|[[Pilt:Võrokõisi_lipp.png|border|25px]] [[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]}}
-{{Nowrap|[[Flag_of_Setomaa.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) set|Seto keeleh]]}}
-{{Nowrap|[[file:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
+{{Nowrap|[[Pilt:Flag_of_Setomaa.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) set|Seto keeleh]]}}
+{{Nowrap|[[Pilt:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
 
 
 {| cellpadding="3" cellspacing="3" style="float:right; margin:5px; border:2px solid; border-color:#CFCFCF; text-size: small; background:#ffffff"
