--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -19,9 +19,9 @@ Võistlus om hüä võimalus võrokeelist vapa võrgoentsüklopeediät inemiisil
 Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) koon'q 2. piimäkuu pääväni (juunini). Võistlõma või tullaq õgal aol tuu vaihõ seeh. 
 
 ==Kiä või ossa võttaq?==
-Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keeleh]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisih [[lõunõeesti kiil|lõunõeesti keelih]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keeleh]]; ka nuuq artikliq ommaq väega oodõduq.
+Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keeleh]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisih [[lõunõeesti kiil|lõunõeesti keelih]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keeleh]]; ka nuuq artikliq ommaq väega oodõduq.
 
-Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
+Osavõtmisõst tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Minkast kirotaq?==
 Kirotaq või kõgõst, miä om küländ tähtsä, et tuust pidänüq umakeelitseh entsüklopeediäh artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Võromaa inemiseq]], [[Setomaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisih artiklih näüdät.
