--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -24,7 +24,7 @@ Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|
 Osavõtmisõst tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Minkast kirotaq?==
-Kirotaq või kõgõst, miä om küländ tähtsä, et tuust piäsiq umakeelitseh entsüklopeediäh artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, eissugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Võromaa inemiseq]], [[Setomaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võisiq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisih artiklih näüdät.
+Kirotaq või kõgõst, miä om küländ tähtsä, et tuust piäsiq umakeelitseh entsüklopeediäh artikli olõma. Höste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, eissugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Võromaa inemiseq]], [[Setomaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võisiq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisih artiklih näüdät.
 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõmah olõva lühkü artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
