/* Kiä või ossa võttaq? */

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -19,7 +19,7 @@ Võistlus om hüä võimalus võrokeelist vapa võrgoentsüklopeediät inemiisil
 Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) koon'q 2. piimäkuu pääväni (juunini). Võistlõma või tullaq õgal aol tuu vaihõ seeh. 
 
 ==Kiä või ossa võttaq?==
-Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keeleh]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisih [[lõunõeesti kiil|lõunõeesti keelih]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keeleh]]; ka nuuq artikliq ommaq väega oodõduq.
+Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keeleh]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisih [[lõunõeesti kiil|lõunõeesti keelih]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keeleh]]; ka nuuq artikliq ommaq veiga oodõduq.
 
 Osavõtmisõst tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
