--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -29,11 +29,11 @@ Kirotaq või kõgõst, miä om küländ tähtsä, et tuust piäsiq umakeelitseh 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõmah olõva lühko artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
 
-Vaia olõsiq, et sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist esiq perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq ei toheq, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
+Vaia olõsiq, et sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
 
-Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüses (lühkümbist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikembist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
+Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkümbist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikembist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
 
-Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklite leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Egäüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
+Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklidõ leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Õgaüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
 
 ==Kiä võistlust kõrraldas ja kiä süriih ommaq?==
 Võistlust kõrraldas MTÜ Wikimedia Eesti.
