/* Miä avvohinnast om? */

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -41,7 +41,7 @@ Võistlust kõrraldas MTÜ Wikimedia Eesti.
 Süriih ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
 ==Miä avvohinnast om?==
-Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
+Parõmbidõ kirotajidõ jaost ommaq vällä pandnuq avvohinnaq:
 
 * '''Kubija Hotell-Luudusspaa''' - spaa- ja sannakeskusõ priipilediq; 
 * '''[[Zetod]], [[Klapp]]''' ja '''[[Kiiora]]''' - õga andsambli kõgõ vahtsõb lasõrplaat;
