*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -14,7 +14,7 @@
 
 '''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediäh edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artiklit ku ka kirotajit. 
 
-Võistlus om hüä võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvambast tetäq ja kutsuq näid üteh lüümä - Vikipeediät saa jo õgaüts eis tävvendäq. 
+Võistlus om hüä võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvabast tetäq ja kutsuq näid üteh lüümä - Vikipeediät saa jo õgaüts eis tävvendäq. 
 
 Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) koon'q 2. piimäkuu pääväni (juunini). Võistlõma või tullaq õgal aol tuu vaihõ seeh. 
 
@@ -31,7 +31,7 @@ Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) s
 
 Vaia olõsiq, et sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
 
-Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkümbist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikembist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
+Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkobist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikebist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
 
 Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklidõ leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Õgaüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
 
@@ -41,7 +41,7 @@ Võistlust kõrraldas MTÜ Wikimedia Eesti.
 Süriih ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
 ==Miä avvohinnast om?==
-Parõmbidõ kirotajidõ jaost ommaq vällä pandnuq avvohinnaq:
+Parebidõ kirotajidõ jaost ommaq vällä pandnuq avvohinnaq:
 
 * '''Kubija Hotell-Luudusspaa''' - spaa- ja sannakeskusõ priipilediq; 
 * '''[[Zetod]], [[Klapp]]''' ja '''[[Kiiora]]''' - õga andsambli kõgõ vahtsõb lasõrplaat;
